--- a/src/components/YearOverview/style.css
+++ b/src/components/YearOverview/style.css
@@ -1,11 +1,53 @@
-.import-statement {
+
+/* MARGIN */
+
+.year-overview {
   margin-left: 15px;
   margin-right: 15px;
 }
 
-@media only screen and (min-width: 786px) {
-  .import-statement {
+@media only screen and (min-width: 768px) {
+  .year-overview {
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+/* FONT SIZE */
+
+.year-overview {
+  font-size: 62.5%;
+}
+.year-overview h1 {
+  font-size: 30px;
+}
+.year-overview h3 {
+  font-size: 21px;
+}
+.year-overview h4 {
+  font-size: 15px;
+}
+
+@media only screen and (min-width: 768px) {
+  .year-overview {
+    font-size: 100%;
+  }
+  .year-overview h1 {
+    font-size: 40px;
+  }
+  .year-overview h3 {
+    font-size: 28px;
+  }
+  .year-overview h4 {
+    font-size: 20px;
+  }
+}
+
+/* PAGE HEADER */
+
+.year-overview .page-header {
+  margin-top: 22px;
+}
+.year-overview .page-header h1 {
+  margin-top: 1px;
 }
