create grid view for monthly comparison

--- a/src/components/MonthlyStatements/style.css
+++ b/src/components/MonthlyStatements/style.css
@@ -62,7 +62,7 @@
   margin-top: 1px;
 }
 .monthly-statements .big-number h1.no-margin {
-  margin-bottom: 0; 
+  margin-bottom: 1px; 
 }
 .monthly-statements .big-number h4 {
   margin-bottom: 1px;
