--- a/src/components/MonthlyComparison/style.css
+++ b/src/components/MonthlyComparison/style.css
@@ -1,13 +1,13 @@
 
 /* MARGIN */
 
-.year-overview {
+.monthly-comparison {
   margin-left: 15px;
   margin-right: 15px;
 }
 
 @media only screen and (min-width: 768px) {
-  .year-overview {
+  .monthly-comparison {
     margin-left: auto;
     margin-right: auto;
   }
@@ -15,39 +15,46 @@
 
 /* FONT SIZE */
 
-.year-overview {
+.monthly-comparison {
   font-size: 62.5%;
 }
-.year-overview h1 {
+.monthly-comparison h1 {
   font-size: 30px;
 }
-.year-overview h3 {
+.monthly-comparison h3 {
   font-size: 21px;
 }
-.year-overview h4 {
+.monthly-comparison h4 {
   font-size: 15px;
 }
 
 @media only screen and (min-width: 768px) {
-  .year-overview {
+  .monthly-comparison {
     font-size: 100%;
   }
-  .year-overview h1 {
+  .monthly-comparison h1 {
     font-size: 40px;
   }
-  .year-overview h3 {
+  .monthly-comparison h3 {
     font-size: 28px;
   }
-  .year-overview h4 {
+  .monthly-comparison h4 {
     font-size: 20px;
   }
 }
 
 /* PAGE HEADER */
 
-.year-overview .page-header {
+.monthly-comparison .page-header {
   margin-top: 22px;
 }
-.year-overview .page-header h1 {
+.monthly-comparison .page-header h1 {
   margin-top: 1px;
+}
+
+/* TABLE */
+
+.monthly-comparison table th,
+.monthly-comparison table td {
+  width: 11%;
 }
